--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             height: 100%;
             display: grid;
         }
+        a {
+            width: 100%;
+            height: 100%;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
