--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
             width: 100%;
             height: 100%;
             display: grid;
+            grid-template-rows: repeat(auto-fit, minmax (200px, 1fr))(auto-fill, 80px);
+            grid-template-columns: auto auto auto auto;
+            grid-gap: 10px;
         }
-        a {
+        #gallery a {
             width: 100%;
             height: 100%;
         }
